# geodesk-py

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CppProperties.json  MANIFEST.in  NOTICE  README.md  build-requirements.txt  pyproject.toml  release.bat  setup.py  sync.bat  x.py
.github/workflows/: build-wheels.yml
doc/: Doxyfile
doc/releases/: v0.1.1.md  v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.2.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md  v0.2.0.md  v0.2.1.md  v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v2.0.0.md  v2.0.5.md  v2.1.0.md  v2.1.1.md  v2.1.3.md  v2.2.0.md
examples/: addr_country.py  admin-areas.py  admin-areas2.py  bad_nodes.py  bike_routes.py  border-speed.py  bridges.py  centers.py  count_way_nodes.py  counties.py  countries.py  cycleways.py  cyclical_relations.py  empty_relations.py  industrial_houses.py  islands.py  landuse.py  maproulette.py  museums.py  nearest_streets.py  oversize_strings.py  post_boxes.py  power-lines.py  power-towers.py  rare_tags.py  river_systems.py  show_tiles.py  simple_admin_areas.py  speed-highways.py  sports_halls.py  streets.py  streets2.py  string_check.py  traffic_signs.py  traffic_signs2.py  unique_nodes.py  vertexes.py  vertexes2.py  water.py  waynodes.py  (+1 more)
geodesk/: __init__.py  __init__.pyi
geodesk2/: __init__.pyi
include/geodesk/: geodesk.h
src/: geodesk.h  main.cpp  main.cxx
src/api/: EmptyQuery.h  Feature.h  FeatureBase.h  Features.h  FeaturesBase.h  Filters.cpp  Filters.h  Node.h  Query.h  QueryAdapter.h  QueryException.h  Relation.h  StringValue.h  Tag.h  TagValue.h  Tags.h  Way.h  Ways.h
src/common/: common.h
src/feature/: AbstractFeatureTableIterator (2).h  AbstractTagIterator.h  FastMemberIterator.cpp  FastMemberIterator.h  Feature.cpp  Feature.h  Feature2.h  FeatureHeader.h  FeatureNodeIterator.cpp  FeatureNodeIterator.h  FeaturePtr.cpp  FeaturePtr.h  FeatureStore.cpp  FeatureStore.h  FeatureTypes.h  Features.h  ForeignFeatureRef.h  GeometryBuilder.cpp  GeometryBuilder.h  GlobalTagIterator.h  KeyIndexSchema.h  LocalTagIterator.h  MemberCollection.cpp  MemberCollection.h  MemberIterator.cpp  MemberIterator.h  MemberTableIterator.h  Node.h  NodePtr.h  NodeTableIterator.h  ParentRelationIterator.cpp  ParentRelationIterator.h  Relation.h  RelationPtr.h  RelationTablePtr.h  RelationTableScanner.h  StringTable.cpp  StringTable.h  TagIterator.cpp  TagIterator.h  (+17 more)
src/filter/: AreaFilter.h  ComboFilter.cpp  ComboFilter.h  ConnectedFilter.cpp  ConnectedFilter.h  ContainsPointFilter.cpp  ContainsPointFilter.h  CrossesFilter.cpp  CrossesFilter.h  Filter.cpp  Filter.h  Filters.cpp  IntersectsFilter.cpp  IntersectsFilter.h  LengthFilter.h  PointDistanceFilter.cpp  PointDistanceFilter.h  PredicateFilter.h  PreparedFilterFactory.cpp  PreparedFilterFactory.h  PreparedSpatialFilter.cpp  PreparedSpatialFilter.h  SpatialFilter.cpp  SpatialFilter.h  WithinFilter.cpp  WithinFilter.h  filters.h  filters_old.h
src/format/: FeatureWriter.cpp  FeatureWriter.h  GeoJsonWriter.cpp  GeoJsonWriter.h  GeometryWriter.cpp  GeometryWriter.h  WktWriter.cpp  WktWriter.h
src/geom/: Area.cpp  Area.h  Box.cpp  Box.h  Centroid.cpp  Centroid.h  Coordinate.h  Distance.cpp  Distance.h  FastArea.cpp  FastArea.h  GeometryBuilder.cpp  GeometryBuilder.h  LambertArea.cpp  LambertArea.h  Length.cpp  Length.h  LengthUnit.cpp  LengthUnit.h  LengthUnit_attr.cxx  LengthUnit_attr.txt  LineSegment.cpp  LineSegment.h  LonLat.h  Mercator.h  OmtTreeBuilder.cpp  OmtTreeBuilder.h  Quadrant.h  Tile.cpp  Tile.h  TilePair.h  algorithms.cpp  algorithms.h
src/gol/: BuildCommand.cpp  BuildCommand.h  GetCommand.cpp  GetCommand.h  GolCommand.cpp  GolCommand.h  GolTool.cpp  GolTool.h  SaveCommand.cpp  SaveCommand.h  main.cxx
src/io/: OsmPbfReader.cxx  OsmPbfReader.h
src/match/: Matcher.cpp  Matcher.h  MatcherCoder.cxx  MatcherCoder.h  MatcherCompiler.cpp  MatcherCompiler.h  MatcherDecoder.cpp  MatcherDecoder.h  MatcherEmitter.cpp  MatcherEmitter.h  MatcherEngine.cpp  MatcherEngine.h  MatcherParser.cpp  MatcherParser.h  MatcherValidator.cpp  MatcherValidator.h  OpGraph.cpp  OpGraph.h  Selector.cpp  Selector.h  TagClause.cpp  TagClause.h
src/osm/: OsmPbfReader.cpp  OsmPbfReader.h
src/python/: Environment.cpp  Environment.h  module.cpp  module.h  version.h
src/query/: AbstractQuery.h  Query.cpp  Query.h  QueryParser.h  QueryResults.h  TileIndexWalker.cpp  TileIndexWalker.h  TileQueryTask.cpp  TileQueryTask.h
test/: conftest.py  test_anonymous_nodes.py  test_area.py  test_area_performance.py  test_around.py  test_basic.py  test_bounds.py  test_box.py  test_build.py  test_concur.py  test_connected_to.py  test_contains.py  test_coordinate.py  test_countries.py  test_crosses.py  test_debug.py  test_dir.py  test_empty.py  test_fast_within.py  test_features.py  test_filter.py  test_filters.py  test_format.py  test_in.py  test_intersects.py  test_issue18.py  test_issue46.py  test_issue50.py  test_load.py  test_main.py  test_map.py  test_match.py  test_mercator.py  test_metadata.py  test_monster.py  test_nodes.py  test_parents.py  test_performance.py  test_polygonizer.py  test_query.py  (+8 more)
test/change/: test_change.py
test/data/: monaco-good.txt  monaco-v2.gol  monaco.gol  not-a-gol.gol
test/feature/: test_anonymous_nodes.py  test_area_performance.py  test_feature_area.py  test_metadata_simple.py  test_query_by_id.py  test_waynodes.py
test/filter/: test_area_length.py  test_connected_to.py  test_containing.py  test_contains.py  test_crossing.py  test_fast_within.py  test_filters.py  test_intersecting.py  test_intersects.py  test_issue57.py  test_with_role.py  test_within.py
test/format/: test_format.py  test_issue60.py
test/geom/: test_area.py  test_box.py  test_buffer.py  test_coordinate.py  test_distance.py  test_length.py  test_mercator.py  test_rtree.py  test_shape.py  units.py
test_cpp/: Features_test.cpp  test_concur.cpp  test_main.cpp
test_cpp/geom/: Tile_test.cpp
tools/: attr_names.py  attrhash.bat  headers.bat  headers.py  namespace.py  newclass.bat  newclass.py
(+391 files in other folders)
