[build-system]
requires = ["setuptools>=42", "wheel", "cibuildwheel", "scikit-build", "ninja"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp*-manylinux_x86_64 cp*-win_amd64 cp*-macosx_x86_64"
# We're excluding musllinux for now...
# build = "cp*-manylinux_x86_64 cp*-musllinux_x86_64 cp*-win_amd64 cp*-macosx_x86_64"

[project]
name = "geodesk"
description = "Fast and storage-efficient spatial database engine for OpenStreetMap features"
version = "0.2.1"
license = { text = "LGPL-3.0-only" }
readme = "README.md"
keywords = ["gis", "openstreetmap", "geospatial", "database" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",  
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Database :: Database Engines/Servers",
]
requires-python = ">=3.9"
dependencies = [
    "shapely >= 2.0.3"
]

[project.urls]
Homepage = "https://www.geodesk.com"
Documentation = "https://docs.geodesk.com/python"
Repository = "https://github.com/clarisma/geodesk-py"
"Bug Tracker" = "https://github.com/clarisma/geodesk-py/issues"
